tree-sitter-gossamer/grammar.js
    source_file: $ => repeat($._statement),

    _item: $ => choice(
      $.use_declaration,
      $.const_item,
      $.static_item,
      $.struct_item,
      $.enum_item,
      $.trait_item,
      $.impl_item,
      $.function_item,
      $.attribute_item,
      $.mod_item,
      $.type_item,
      $.extern_item,
    ),

    attribute_item: $ => seq(
      choice("#", "#!"),
      "[",
      $._token_tree,
      "]",
    ),

    _token_tree: $ => repeat1(choice(
      /[^\[\]]+/,
      seq("[", $._token_tree, "]"),
    )),

    _path: $ => seq(
      $.identifier,
      repeat(seq("::", $.identifier)),
    ),

    enum_item: $ => seq(
      optional("pub"),
      "enum",
      field("name", $.type_identifier),
      optional($.type_parameters),
      "{",
      commaSep($.enum_variant),
      "}",
    ),

    enum_variant: $ => seq(
      repeat($.attribute_item),
      field("name", $.type_identifier),
      optional(choice(
        seq("(", commaSep($._type), ")"),
        seq("{", commaSep($.field_declaration), "}"),
      )),
    ),

    trait_item: $ => seq(
      optional("pub"),
      "trait",
      field("name", $.type_identifier),
      optional($.type_parameters),
      optional(seq(":", $._type, repeat(seq("+", $._type)))),
      $.declaration_block,
    ),

    declaration_block: $ => seq(
      "{",
      repeat($._item),
      "}",
    ),

    function_item: $ => prec.right(seq(
      optional("pub"),
      optional("async"),
      optional("unsafe"),
      "fn",
      field("name", $.identifier),
      optional($.type_parameters),
      field("parameters", $.parameters),
      optional(seq("->", field("return_type", $._type))),
      optional(seq("where", commaSep1($.where_clause))),
      // Trait method signatures carry neither a body nor a `;`.
      optional(choice(
        $.block,
        ";",
      )),
    )),

    parameters: $ => seq(
      "(",
      commaSep(choice(
        seq(optional("&"), optional("mut"), "self"),
        $.parameter,
      )),
      ")",
    ),

    parameter: $ => seq(
      field("pattern", $._pattern),
      ":",
      field("type", $._type),
    ),

    block: $ => seq(
      "{",
      repeat($._statement),
      optional($._expression),
      "}",
    ),

    _statement: $ => choice(
      prec.right(seq($._expression, optional(";"))),
      $.let_declaration,
      $.arena_block,
      $._item,
      ";",
    ),

    // `arena` is a contextual keyword: statement-position `arena { ... }`
    // frees everything allocated inside the block when it exits.
    arena_block: $ => seq("arena", $.block),

    let_declaration: $ => prec.right(seq(
      "let",
      optional("mut"),
      field("pattern", $._pattern),
      optional(seq(":", field("type", $._type))),
      optional(seq("=", field("value", $._expression))),
      optional(seq("else", field("alternative", $.block))),
      optional(";"),
    )),

    _pattern: $ => choice(
      $.literal,
      $.tuple_pattern,
      $.struct_pattern,
      $.tuple_struct_pattern,
      $.reference_pattern,
      $.range_pattern,
      $.or_pattern,
      $.captured_pattern,
      $.mut_pattern,
      "_",
      $._path,
    ),

    // prec -1: `&mut x` is a mutable reference pattern, not `&(mut x)`.
    mut_pattern: $ => prec(-1, seq("mut", $.identifier)),

    tuple_pattern: $ => seq("(", commaSep(choice($._pattern, "..")), ")"),

    tuple_struct_pattern: $ => seq(
      $._path,
      "(",
      commaSep(choice($._pattern, "..")),
      ")",
    ),

    _type: $ => choice(
      $.primitive_type,
      $.generic_type,
      $.reference_type,
      $.tuple_type,
      $.array_type,
      $.function_type,
      $.type_identifier,
      $._path,
      seq("dyn", $._type),
    ),

    primitive_type: _ => choice(...primitive_types),

    type_identifier: _ => /[\p{Lu}][\p{XID_Continue}]*/,

    // prec 1: after `x as Foo`, a following `<` opens generic arguments.
    generic_type: $ => prec(1, seq(
      choice($.type_identifier, $._path),
      "<",
      commaSep1($._type),
      ">",
    )),

    reference_type: $ => seq("&", optional("mut"), $._type),

    tuple_type: $ => seq("(", commaSep($._type), ")"),

    function_type: $ => prec(1, seq(
      choice("fn", $.type_identifier),
      "(",
      commaSep($._type),
      ")",
      optional(seq("->", $._type)),
    )),

    _expression: $ => choice(
      $.literal,
      $._path,
      $.unary_expression,
      $.binary_expression,
      $.pipe_expression,
      $.assignment_expression,
      $.call_expression,
      $.generic_function,
      $.macro_invocation,
      $.cast_expression,
      $.try_expression,
      $.field_expression,
      $.method_call_expression,
      $.index_expression,
      $.reference_expression,
      $.range_expression,
      $.tuple_expression,
      $.array_expression,
      $.struct_expression,
      $.if_expression,
      $.match_expression,
      $.loop_expression,
      $.while_expression,
      $.for_expression,
      $.return_expression,
      $.break_expression,
      $.continue_expression,
      $.go_expression,
      $.defer_expression,
      $.select_expression,
      $.closure_expression,
      $.parenthesized_expression,
      $.block,
    ),

    literal: $ => choice(
      $.integer_literal,
      $.float_literal,
      $.string_literal,
      $.raw_string_literal,
      $.byte_string_literal,
      $.char_literal,
      $.boolean_literal,
    ),

    integer_literal: _ => token(seq(
      choice(
        /[0-9][0-9_]*/,
        /0x[0-9a-fA-F_]+/,
        /0b[01_]+/,
        /0o[0-7_]+/,
      ),
      optional(choice(...integer_types, ...float_types)),
    )),

    float_literal: _ => token(seq(
      /[0-9][0-9_]*\.[0-9_]+([eE][+-]?[0-9_]+)?/,
      optional(choice(...float_types)),
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $._string_content,
        $.escape_sequence,
      )),
      '"',
    ),

    _string_content: _ => /[^"\\]+/,

    identifier: _ => /[_\p{XID_Start}][\p{XID_Continue}]*/,

    reference_expression: $ => prec(PREC.unary, seq(
      "&",
      optional("mut"),
      $._expression,
    )),

    binary_expression: $ => {
      const table = [
        [PREC.multiplicative, choice("*", "/", "%")],
        [PREC.additive, choice("+", "-")],
        [PREC.shift, choice("<<", ">>")],
        [PREC.bitand, "&"],
        [PREC.bitxor, "^"],
        [PREC.bitor, "|"],
        [PREC.comparative, choice("==", "!=", "<", "<=", ">", ">=")],
        [PREC.and, "&&"],
        [PREC.or, "||"],
      ];

      return choice(...table.map(([prec_, op]) =>
        prec.left(prec_, seq($._expression, op, $._expression)),
      ));
    },

    call_expression: $ => prec(PREC.postfix, seq(
      field("function", $._expression),
      field("arguments", seq("(", commaSep($._expression), ")")),
    )),

    // Turbofish call target: `from_json::<User>(&text)`.
    generic_function: $ => prec(1, seq(
      field("function", $._path),
      "::<",
      commaSep1($._type),
      ">",
    )),

    // Six paren-shaped format macros plus `vec![...]` / `vec![v; n]`.
    macro_invocation: $ => seq(
      field("macro", $.identifier),
      token.immediate("!"),
      choice(
        seq("(", commaSep($._expression), ")"),
        seq("[", choice(
          commaSep($._expression),
          seq($._expression, ";", $._expression),
        ), "]"),
      ),
    ),

    cast_expression: $ => prec.left(PREC.cast, seq(
      $._expression,
      "as",
      field("type", $._type),
    )),

    try_expression: $ => prec(PREC.postfix, seq($._expression, "?")),

    method_call_expression: $ => prec(14, seq(
      $._expression,
      ".",
      $.identifier,
      optional(seq("::<", commaSep1($._type), ">")),
      "(",
      commaSep($._expression),
      ")",
    )),

    tuple_expression: $ => choice(
      seq("(", ")"),
      seq("(", $._expression, ",", commaSep($._expression), ")"),
    ),

    if_expression: $ => prec.right(seq(
      "if",
      field("condition", choice($._expression, $.let_condition)),
      field("consequence", $.block),
      optional(seq("else", choice($.block, $.if_expression))),
    )),

    // `if let PAT = expr { ... }` / `while let PAT = expr { ... }`.
    let_condition: $ => seq(
      "let",
      field("pattern", $._pattern),
      "=",
      field("value", $._expression),
    ),

    while_expression: $ => seq(
      "while",
      field("condition", choice($._expression, $.let_condition)),
      $.block,
    ),

    return_expression: $ => prec.right(seq("return", optional($._expression))),

    closure_expression: $ => choice(
      prec.right(PREC.closure, seq(
        field("parameters", $.closure_parameters),
        optional(seq("->", field("return_type", $._type))),
        field("body", $._expression),
      )),
      seq(
        "fn",
        field("parameters", $.parameters),
        optional(seq("->", field("return_type", $._type))),
        field("body", $.block),
      ),
    ),

    closure_parameters: $ => choice(
      "||",
      seq("|", commaSep($.closure_parameter), "|"),
    ),

    // Or-patterns are excluded: a bare `|` always closes the parameter list.
    closure_parameter: $ => seq(
      field("pattern", choice(
        $.tuple_pattern,
        $.reference_pattern,
        "_",
        $.identifier,
      )),
      optional(seq(":", field("type", $._type))),
    ),
  },
});

function commaSep(rule) {
  return optional(commaSep1(rule));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)), optional(","));
}
